add images and change contacts to get in touch

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <div class="container">
+      <h1>Other Services</h1>
       <div class="cards">
+        
         <div class="card">
             <div class="image">
-              <img src="https://cdn.hipwallpaper.com/i/31/6/6QtWKT.jpg" width="400" height="200"alt="" >
+              <img src="https://media.istockphoto.com/photos/emergency-department-picture-id538726573?k=6&m=538726573&s=612x612&w=0&h=srnvZXMNZ0d4OB09zbctUsObWEvNZ7C3Uw0ssguXX6A=" width="400" height="200"alt="" >
             </div>
             <div class="title">
                 <h3>Emergency case</h3>
@@ -43,13 +45,13 @@
         <br/>
         <div class="card">
             <div class="image">
-              <img src="https://cdn.hipwallpaper.com/i/31/6/6QtWKT.jpg"width="400" height="200" alt="" >
+              <img src="https://hhp-blog.s3.amazonaws.com/2020/04/GettyImages-1094017746.jpg"width="400" height="200" alt="" >
             </div>
             <div class="title">
                 <h3>Health Queries</h3>
             </div>
             <div class="des">
-                <p>In case of consultation and more information,<br/>contuct us  via email or contact on the get in touch section at thr bottom of this page</p>
+                <p>In case of consultation and more information,<br/>contuct us  via email or contact on the get in touch section at the bottom of this page</p>
             </div>
               
 
