--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <option value="10:00am">10:00am</option>
                             <option value="2:00pm">2:00pm</option>
                          </select>
-                            <button type="button" class="btn btn-primary">Book Appointment</button>
+                            <button type="button" class="btn btn-primary" onclick="myFunction()">Book Appointment</button>
                         </div>
 
 
