changed one of department names on index.html

--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
                             <label for="Department">Department</label>
                             <select id="Department" name="Department">
                           <option value="Doctor ">Family Doctor</option>
-                          <option value="Phycisian">Colon Surgeon</option>
+                          <option value="Phycisian">Surgeon</option>
                           <option value="Dentist">Dentist</option>
-                          <option value="Dentist">Surgeologist</option>
+                          <option value="Dentist">Psychologist
+
+                          </option>
 
                         </select>
                             <label for="Time">Time</label>
